# gridpulse-backend

./: Makefile  README.md  pyproject.toml
.github/workflows/: update-data.yml  workflow.yml
dailygrid_backend/: config.py  data_fetcher.py  data_writer.py  eia_client.py  types.py  utils.py
data/: daily_energy_mix_latest.json  us-latest.json
gridpulse_backend/: config.py  data_fetcher.py  data_writer.py  eia_client.py  utils.py
public/data/: daily_energy_mix_latest.json
scripts/: update_data.py
tests/: test_types.py
tests/data/: us-latest-test.json
