[tool.poetry]
name = "dailygrid-backend"
version = "0.1.0"
description = ""
authors = ["joypauls <joypaulsen3@gmail.com>"]
readme = "README.md"
packages = [{ include = "dailygrid_backend" }]

[tool.poetry.dependencies]
python = "^3.13"
python-dotenv = "^1.1.0"
requests = "^2.32.3"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[tool.poetry.scripts]
update_data = "scripts.update_data:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
